--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.70MB/s(Youtube:不良林), server: 208.98.48.2, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 208.98.48.2}}
-  - {name: 🇨🇳 中国-892.9KB/s(Youtube:不良林), server: 42.157.195.240, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇦 加拿大-3.38MB/s(Youtube:不良林), server: 147.182.151.24, port: 20110, type: ss, cipher: aes-256-cfb, password: f5e0ecc4e6b84a668ee9ed98e0a30ca9}
-  - {name: 🇨🇳 中国-151.1KB/s(Youtube:不良林), server: 42.157.195.243, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇺🇸 美国-5.25MB/s(Youtube:不良林), server: charge.starspace.link, port: 443, type: trojan, password: 8UnS7eSMi8OFKfje, sni: charge.starspace.link, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.89MB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇰🇷 韩国-8.72MB/s(Youtube:不良林), server: 3.39.250.199, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇺🇸 美国-3.47MB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s1.upyun.online, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-306.3KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s1.upyun.online, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.28MB/s(Youtube:不良林), server: sg1.v2yyds.cc, port: 32110, type: trojan, password: c0669346-7ba9-4fda-91a4-238fb8d0a4d2, sni: sg1.v2yyds.cc, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.71, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-250.6KB/s(Youtube:不良林), server: 42.157.195.243, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇸🇬 新加坡-2.28MB/s(Youtube:不良林), server: sg3.v2yyds.cc, port: 32110, type: trojan, password: c0669346-7ba9-4fda-91a4-238fb8d0a4d2, sni: sg3.v2yyds.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2, server: 42.157.195.233, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-2.45MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-309.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-338.3KB/s(Youtube:不良林), server: ingress-i2.onebox6.org, port: 38101, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.onebox6.org}}
+  - {name: 🇨🇳 中国-609.7KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-892.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-151.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-306.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-609.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-892.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-151.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-306.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-609.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-892.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-151.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-306.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-609.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-892.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-151.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-306.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-609.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-892.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-151.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-306.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-609.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-892.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-151.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-306.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-609.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-892.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-151.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-8.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-306.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-609.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
