--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 42.157.195.244, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-758.4KB/s(Youtube:不良林), server: 42.157.195.231, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2, server: 14.152.92.79, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.71, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2, server: 42.157.195.242, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇭🇰 香港-3.78MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
-  - {name: 🇯🇵 日本-19.16MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-2.58MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.16MB/s(Youtube:不良林), server: 34.215.130.186, port: 10089, type: vmess, uuid: 3608c9dc-1eeb-48b0-b570-43074b4a0c9e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 34.215.130.186}}
+  - {name: 🇨🇳 中国-1.12MB/s(Youtube:不良林), server: 42.157.195.241, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-806.6KB/s(Youtube:不良林), server: 14.152.92.76, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.75, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇦 加拿大-2.31MB/s(Youtube:不良林), server: 147.182.151.24, port: 20110, type: ss, cipher: aes-256-cfb, password: f5e0ecc4e6b84a668ee9ed98e0a30ca9}
+  - {name: 🇨🇳 中国-557.3KB/s(Youtube:不良林), server: 14.152.92.79, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇷🇺 俄罗斯联邦-470.4KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-532.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-1012.7KB/s(Youtube:不良林), server: 42.157.195.236, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇦🇺 澳大利亚-602.7KB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-863.4KB/s(Youtube:不良林), server: 14.152.92.77, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-806.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.16MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-470.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1012.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-602.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-863.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-806.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.16MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-470.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1012.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-602.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-863.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-806.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.16MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-470.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1012.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-602.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-863.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-806.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.16MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-470.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1012.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-602.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-863.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-806.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.16MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-470.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1012.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-602.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-863.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-806.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.16MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-470.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1012.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-602.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-863.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-806.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇭🇰 香港-3.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.16MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-470.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1012.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-602.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-863.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
