--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -7,6 +7,7 @@ external-controller: :9090
 proxies:
   - {name: 🇯🇵 日本-3.57MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.90MB/s(Youtube:不良林), server: us24058.cloudmatrix.xyz, port: 24058, type: vmess, uuid: a992be42-bed4-3037-8788-9e860cd635d3, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: us24058.cloudmatrix.xyz}}
+  - {name: 🇨🇳 中国-205.0KB/s(Youtube:不良林), server: 116.162.43.38, port: 30075, type: vmess, uuid: cf8acaed-8ea7-3caf-b457-3ba13b64d8dd, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /videos, ws-headers: {Host: 116.162.43.38}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -15,6 +16,7 @@ proxy-groups:
       - 🎯 全球直连
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-205.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -22,6 +24,7 @@ proxy-groups:
     proxies:
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-205.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -30,6 +33,7 @@ proxy-groups:
       - 🎯 全球直连
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-205.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -42,6 +46,7 @@ proxy-groups:
       - 🔰 节点选择
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-205.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
@@ -49,6 +54,7 @@ proxy-groups:
       - 🎯 全球直连
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-205.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -57,6 +63,7 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-205.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -74,6 +81,7 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-205.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
